# apps/backend/src/automations/dto/automation.dto.ts
@@ -1,16 +1,0 @@
-import { IsString } from 'class-validator';
-import { Automation } from '../schemas/automation.schema';
-
-export class CreateAutomationDto implements Pick<Automation, 'name'> {
-  @IsString()
-  name: string;
-}
-
-export class UpdateAutomationDto extends CreateAutomationDto {}
-
-export class AutomationsPaginatedDto {
-  total: number;
-  limit: number;
-  offset: number;
-  results: Automation[];
-}
