# apps/backend/src/automations/dto/automations-paginated.dto.ts
@@ -1,0 +1,8 @@
+import { Automation } from '../schemas/automation.schema';
+
+export class AutomationsPaginatedDto {
+  total: number;
+  limit: number;
+  offset: number;
+  results: Automation[];
+}
