# apps/backend/src/automations/dto/create-step.dto.ts
@@ -1,0 +1,13 @@
+import { IsOptional, ValidateNested } from 'class-validator';
+
+import { AutomationStep } from '../schemas/automation.schema';
+import { AutomationConnection } from '../schemas/automation.schema';
+
+export class CreateStepDto {
+  @ValidateNested()
+  step: AutomationStep;
+
+  @ValidateNested()
+  @IsOptional()
+  connection?: AutomationConnection;
+}
