# apps/backend/src/automations/dto/mutate-automation.dto.ts
@@ -1,0 +1,7 @@
+import { IsString } from 'class-validator';
+import { Automation } from '../schemas/automation.schema';
+
+export class MutateAutomationDto implements Pick<Automation, 'name'> {
+  @IsString()
+  name: string;
+}
