# apps/backend/src/automations/dto/tasks.dto.ts
@@ -1,9 +1,0 @@
-import { IsArray, IsString } from 'class-validator';
-
-export class TelegramSendMessageTaskDto {
-  @IsString()
-  message: string;
-
-  @IsArray()
-  quickReplies: string[];
-}
